--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
           <div class="mb-4" >
               <a href="">
                 <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                    <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
+                    <img src="../static/escolar.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                 </div>
             </a>
           </div>
@@ -65,7 +65,7 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/higiene.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
@@ -74,7 +74,7 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/leite.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
@@ -83,7 +83,7 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/roupas.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
@@ -92,7 +92,7 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/sapatos.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
@@ -100,10 +100,29 @@
       </div>
       <div class="row">
         <div class="col-sm-2">
+            <div class="mb-4" >
+                <a href="">
+                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
+                      <img src="../static/higiene.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                  </div>
+              </a>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="mb-4" >
+                <a href="">
+                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
+                      <img src="../static/roupas.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                  </div>
+              </a>
+            </div>
+        </div>
+          
+        <div class="col-sm-2">
           <div class="mb-4" >
               <a href="">
                 <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                    <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                    <img src="../static/escolar.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                 </div>
             </a>
           </div>
@@ -112,7 +131,17 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/sapatos.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                  </div>
+              </a>
+            </div>
+        </div>
+        
+        <div class="col-sm-2">
+            <div class="mb-4" >
+                <a href="">
+                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
+                      <img src="../static/leite.jpeg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
@@ -121,38 +150,12 @@
             <div class="mb-4" >
                 <a href="">
                   <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
+                      <img src="../static/fralda.jpg" class="card-img-top item-image" alt="Necessidade 1">
                   </div>
               </a>
             </div>
         </div>
-        <div class="col-sm-2">
-            <div class="mb-4" >
-                <a href="">
-                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
-                  </div>
-              </a>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            <div class="mb-4" >
-                <a href="">
-                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
-                  </div>
-              </a>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            <div class="mb-4" >
-                <a href="">
-                  <div class="d-flex justify-content-center align-items-center" style="height: 100px;">
-                      <img src="../static/pao.jpeg" class="card-img-top item-image" alt="Necessidade 1">
-                  </div>
-              </a>
-            </div>
-        </div>
+        
       </div>
     </div>
   </main>
