--- a/templates/cadastro_resumo.html
+++ b/templates/cadastro_resumo.html
@@ -38,12 +38,7 @@
       <p><strong>Telefone:</strong> (123) 456-7890</p>
 
       <div class="map-container">
-        <iframe
-          width="100%"
-          height="100%"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=123+Rua+Exemplo,Cidade,Estado" allowfullscreen>
-        </iframe>
+       <img src="../static/mapa.png" alt="mapa">
       </div>
   </div>
 </body>
