--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Cadastrar</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Entrar</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -160,13 +163,13 @@
     </div>
   </main>
   <div class="text-center mt-4">
-    <a href="cadastro" class="btn btn-primary">Quero ajudar</a>
+    <a href="cadastro" class="btn btn-primary">Quero ser um padrinho</a>
   </div>
   
   
 <footer class="bg-light mt-4">
     <div class="container mt-4">
-        <h3>Parceiros</h3>
+        <h3>Padrinhos</h3>
         <div id="parceirosCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
