--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -13,6 +13,32 @@
   </style>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <a class="navbar-brand" href="#">Plataforma de Necessidades</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="/">Necessidades Atuais</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cadastro">Cadastrar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="add_item">Adicionar item</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="dashboard">Dashboard</a>
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </header>
   <div class="container mt-4">
     <h2>Cadastro</h2>
     <form class="custom-form" action="resumo" method="post">
