--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,16 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Necessidades Atuais</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="cadastro">Cadastrar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="add_item">Adicionar item</a>
+                    <a class="nav-link" href="/">Necessidades Atuais</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Dashboard</a>
+                    <a class="nav-link" href="cadastro">Ser Padrinho</a>
                   </li>
               </ul>
             </div>
