--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,14 +29,8 @@
                   <a class="nav-link" href="/">Necessidades Atuais</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="cadastro">Cadastrar</a>
+                  <a class="nav-link" href="cadastro">Ser Padrinho</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="add_item">Adicionar item</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Dashboard</a>
-                  </li>
               </ul>
             </div>
           </div>
